--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "@xterm/headless": "^5.5.0",
-    "node-pty": "^1.0.0"
+    "node-pty": "^1.0.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
